# LearnLOT

./: README.md
NFC Reader Library for Linux/SW369321/: CMakeLists.txt  README.md  README.txt
NFC Reader Library for Linux/SW369321/ComplianceApp/: CMakeLists.txt
NFC Reader Library for Linux/SW369321/ComplianceApp/NfcrdlibEx11_ISO10373_PCD/: NfcrdlibEx11_ISO10373_PCD.c  Readme.txt
NFC Reader Library for Linux/SW369321/ComplianceApp/Nfcrdlib_SimplifiedAPI_EMVCo/: Nfcrdlib_SimplifiedAPI_EMVCo.c  Readme.txt
NFC Reader Library for Linux/SW369321/ComplianceApp/Nfcrdlib_SimplifiedAPI_EMVCo_Analog/: Nfcrdlib_SimplifiedAPI_EMVCo_Analog.c  Readme.txt
NFC Reader Library for Linux/SW369321/ComplianceApp/Nfcrdlib_SimplifiedAPI_EMVCo_Interop/: Nfcrdlib_SimplifiedAPI_EMVCo_Interop.c  Readme.txt
NFC Reader Library for Linux/SW369321/Examples/: CMakeLists.txt
NFC Reader Library for Linux/SW369321/Examples/NfcrdlibEx1_BasicDiscoveryLoop/: NfcrdlibEx1_BasicDiscoveryLoop.c  Readme.txt
NFC Reader Library for Linux/SW369321/Examples/NfcrdlibEx2_AdvancedDiscoveryLoop/: NfcrdlibEx2_AdvancedDiscoveryLoop.c  Readme.txt
NFC Reader Library for Linux/SW369321/Examples/NfcrdlibEx3_NFCForum/: NfcrdlibEx3_NFCForum.c  Readme.txt
NFC Reader Library for Linux/SW369321/Examples/NfcrdlibEx4_MIFAREClassic/: NfcrdlibEx4_MIFAREClassic.c  Readme.txt
NFC Reader Library for Linux/SW369321/Examples/NfcrdlibEx5_ISO15693/: NfcrdlibEx5_ISO15693.c  Readme.txt
NFC Reader Library for Linux/SW369321/Examples/NfcrdlibEx7_EMVCo_Polling/: NfcrdlibEx7_EMVCo_Polling.c  Readme.txt
NFC Reader Library for Linux/SW369321/Examples/NfcrdlibEx8_HCE_T4T/: NfcrdlibEx8_HCE_T4T.c  Readme.txt
NFC Reader Library for Linux/SW369321/Examples/NfcrdlibEx9_NTagI2C/: NfcrdlibEx9_NTagI2C.c  Readme.txt
NFC Reader Library for Linux/SW369321/Examples/NfcrdlibTst12_Rc663Lpcd/: NfcrdlibTst12_Rc663Lpcd.c  Readme.txt
NFC Reader Library for Linux/SW369321/Examples/Nfcrdlib_SimplifiedAPI_ISO/: Nfcrdlib_SimplifiedApi_ISO.c  Readme.txt
NFC Reader Library for Linux/SW369321/NxpNfcRdLib/intfs/: NxpNfcRdLib_Ver.h  phCidManager.h  phCryptoRng.h  phCryptoSym.h  phKeyStore.h  phLog.h  phNfcLib.h  phNxpNfcRdLib_Config.h  phTMIUtils.h  phTools.h  phacDiscLoop.h  phalFelica.h  phalI18000p3m3.h  phalICode.h  phalMfNtag42XDna.h  phalMfc.h  phalMfdf.h  phalMfdfLight.h  phalMful.h  phalT1T.h  phalTop.h  phalVca.h  phceT4T.h  phhalHw.h  phhalHw_Pn5180_Instr.h  phhalHw_Rc663_Cmd.h  phhalHw_Rc663_Reg.h  phlnLlcp.h  phnpSnep.h  phpalEpcUid.h  phpalFelica.h  phpalI14443p3a.h  phpalI14443p3b.h  phpalI14443p4.h  phpalI14443p4a.h  phpalI14443p4mC.h  phpalI18000p3m3.h  phpalI18092mPI.h  phpalI18092mT.h  phpalMifare.h  (+1 more)
NFC Reader Library for Linux/SW369321/NxpNfcRdLib/types/: ph_NxpBuild.h  ph_NxpBuild_Platform.h  ph_RefDefs.h  ph_Status.h  ph_TypeDefs.h
NFC Reader Library for Linux/SW369321/docs/DAL/: NXP-DAL-apiguide.html
NFC Reader Library for Linux/SW369321/docs/NxpNfcRdLib/: NXP-NFCReaderLibrary-apiguide.html
NFC Reader Library for Linux/SW369321/docs/OSAL/: NXP-OSAL-apiguide.html
TestUS100/: US_100.py  main.qml
(+982 files in other folders)
