
cmake_minimum_required(VERSION 2.8)

OPTION(WITH_NDA              "With Components/Examples Under NDA" OFF)

OPTION(BOARD_RaspberryPi  "Platform is RaspberryPi"            ON)

OPTION(FRONTEND_PN5180       "IC Frontend is PN5180"              OFF)
OPTION(FRONTEND_RC663        "IC Frontend is RC663"               ON)

OPTION(BUS_SPIUserMode       "Connected to FRONTEND over SPI in User Mode"     OFF)
OPTION(BUS_SPIKernelMode     "Connected to FRONTEND over SPI in Kernal Mode"   OFF)

IF(BUS_SPIKernelMode AND BUS_SPIUserMode)
    MESSAGE(FATAL_ERROR "Can not select both SPI Kernel Mode and SPI User Mode")
ENDIF()

IF(BUS_SPIKernelMode AND FRONTEND_RC663)
    MESSAGE(FATAL_ERROR "SPI Kernel Mode is not supported for RC663")
ENDIF()

IF (FRONTEND_PN5180 AND FRONTEND_RC663)
    MESSAGE(FATAL_ERROR "PN5180 and RC663 can not be compiled at the same time. ")
ENDIF (FRONTEND_PN5180 AND FRONTEND_RC663)

PROJECT(NxpNfcRdLibSW)

IF (BUS_SPIKernelMode OR BUS_SPIUserMode)
    ADD_DEFINITIONS(-DNXPBUILD__PHBAL_SELECTED)
ENDIF ()

IF(BUS_SPIKernelMode)
    ADD_DEFINITIONS(-DNXPBUILD__PHBAL_REG_LINUX_KERNEL_SPI)
ENDIF()

IF(BUS_SPIUserMode)
    ADD_DEFINITIONS(-DNXPBUILD__PHBAL_REG_LINUX_USER_SPI)
ENDIF()

IF (FRONTEND_PN5180 OR FRONTEND_RC663)
    ADD_DEFINITIONS(-DNXPBUILD__PHHAL_SELECTED)
ENDIF (FRONTEND_PN5180 OR FRONTEND_RC663)

IF(FRONTEND_PN5180)
    ADD_DEFINITIONS(-DNXPBUILD__PHHAL_HW_PN5180)
ENDIF()

IF(FRONTEND_RC663)
    ADD_DEFINITIONS(-DNXPBUILD__PHHAL_HW_RC663)
ENDIF()

INCLUDE_DIRECTORIES(
    Platform/DAL/inc
    Platform/DAL/boards
    Platform/DAL/cfg
    RTOS/phOsal/inc
)

IF(BOARD_RaspberryPi)
    ADD_DEFINITIONS(-pthread)
    ADD_DEFINITIONS(-DDEBUG)
    ADD_DEFINITIONS(-g)
ENDIF()

IF(BOARD_RaspberryPi)
    IF(FRONTEND_PN5180)
        ADD_DEFINITIONS(-DPHDRIVER_PIPN5180_BOARD)
    ENDIF(FRONTEND_PN5180)
    IF(FRONTEND_RC663)
        ADD_DEFINITIONS(-DPHDRIVER_PIRC663_BOARD)
    ENDIF(FRONTEND_RC663)
    ADD_DEFINITIONS(-DNXPBUILD__PH_RASPBERRY_PI)
    ADD_DEFINITIONS(-DPH_OSAL_LINUX)
    INCLUDE_DIRECTORIES(
        "Platform/DAL/src/Linux/"
    )
ENDIF(BOARD_RaspberryPi)

ADD_SUBDIRECTORY(NxpNfcRdLib)
ADD_SUBDIRECTORY(Platform/DAL)
ADD_SUBDIRECTORY(RTOS/phOsal)

INCLUDE_DIRECTORIES(
    ${NxpNfcRdLib_SOURCE_DIR}/intfs
    ${NxpNfcRdLib_SOURCE_DIR}/types
)

ADD_SUBDIRECTORY(Examples)
ADD_SUBDIRECTORY(ComplianceApp)
